kubernetes/sb-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sb-app
  template:
    metadata:
      labels:
        app: sb-app
    spec:
      containers:
      - name: spring-boot-app
        image: shady15/spring-boot-app:v1
        ports:
        - containerPort: 8080
