kubernetes/sb-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  type: NodePort
  selector:
    app: sb-app
  ports:
  - port: 80
    targetPort: 8080
