kubernetes/sb-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: spring-boot-service
                port:
                  number: 80
